Fixed the path of logos

--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary custom-bottom-shadow mb-5 px-5">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                    <img src="../img/logo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+                    <img src="/img/logo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
             <p class="col-md-4 mb-0 text-body-secondary">2024 JeCyMa - Version 1.0</p>
 
             <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img src="../img/logo-text.png" alt="Logo" height="20">
+                <img src="/img/logo-text.png" alt="Logo" height="20">
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
