--- a/NumAndDrive/Views/Admin/Details.cshtml
+++ b/NumAndDrive/Views/Admin/Details.cshtml
@@ -4,6 +4,8 @@
 
 <a asp-controller="admin" asp-action="getUsers" class="btn custom-color-orange text-white custom-bottom-shadow">Retour</a>
 
+<h2 class="m-5">Détails de l'utilisateur</h2>
+
 <table class="table table-striped">
     <thead>
         <tr>
