--- a/NumAndDrive/Views/Admin/GetUsers.cshtml
+++ b/NumAndDrive/Views/Admin/GetUsers.cshtml
@@ -2,6 +2,9 @@
 
 @model List<User>
 <a asp-controller="admin" asp-action="index" class="btn custom-color-orange text-white custom-bottom-shadow">Retour</a>
+
+<h2 class="m-5">Utilisateurs</h2>
+
 <table class="table table-striped">
     <thead>
         <tr>
