Feat: left part of the profile section is created

--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Accueil</a>
                         <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
                         <partial name="_LoginPartial">
-                        <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="getMyId">Mon profil</a>
+                        <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
                     </div>
                 </div>
             </div>
