--- a/NumAndDrive/Views/User/Index.cshtml
+++ b/NumAndDrive/Views/User/Index.cshtml
@@ -4,27 +4,44 @@
 @if (Model != null)
 {
     <div>
-        <div class="col-5">
-            <div class="d-flex flex-column align-items-center text-center">
-                <img class="col-6 border border-dark border-1 rounded-5 rounded-circle p-3" src="@Model.ProfilePicturePath" alt="Photo de profil" />
-                <p class="text-custom-color-blue mt-5 mb-0 fw-bold fs-2"><span class="text-uppercase">@Model.LastName</span> @Model.FirstName</p>
-                <p class="text-custom-color-blue mb-5 fst-italic fs-3 fw-lighter">@Model.UserType</p>
-                <div class="text-custom-color-blue fs-4 fw-light">
+        <div class="row">
+            <div class="col-5">
+                <div class="d-flex flex-column align-items-center text-center">
+                    <img class="col-6 border border-dark border-1 rounded-5 rounded-circle p-3" src="@Model.ProfilePicturePath" alt="Photo de profil" />
+                    <p class="text-custom-color-blue mt-5 mb-0 fw-bold fs-2"><span class="text-uppercase">@Model.LastName</span> @Model.FirstName</p>
+                    <p class="text-custom-color-blue mb-5 fst-italic fs-3 fw-lighter">@Model.UserType</p>
+                    <div class="text-custom-color-blue fs-4 fw-light">
                         @if (Model.City != null)
-                            {
+                        {
                             <p>@Model.City</p>
-                            }
-                            else
-                            {
+                        }
+                        else
+                        {
                             <p>Ville non renseignée</p>
-                            }
-                    <p>@Model.Status</p>
+                        }
+                        <p>@Model.Status</p>
+                    </div>
+                    <img class="col-4 m-5" src="/img/basic-notation.png" alt="Notes de la communauté" />
                 </div>
-                <img class="col-4 m-5" src="/img/basic-notation.png" alt="Notes de la communauté"/>
             </div>
-        </div>
-        <div class="col-7">
-
+            <div class="col-7">
+                <div class="row">
+                    <div class="card border-dark col custom-bottom-shadow">
+                        <div class="card-body">
+                            test
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="card border-dark col custom-bottom-shadow">
+                        <div class="card-body d-flex justify-content-between align-items-center text-center">
+                            <img class="col-1 icon-default-height" src="/img/rewards-icon.png" alt="Récompenses" />
+                            <p class="fs-3 col-10 text-custom-color-blue">Mes badges et récompenses</p>
+                            <p class="fs-1 text-custom-color-orange col-1 fw-lighter">></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 }
