--- a/NumAndDrive/Views/User/Index.cshtml
+++ b/NumAndDrive/Views/User/Index.cshtml
@@ -3,10 +3,10 @@
 
 @if (Model != null)
 {
-    <div>
+    <div class="text-center">
         <div class="row">
             <div class="col-5">
-                <div class="d-flex flex-column align-items-center text-center">
+                <div class="d-flex flex-column align-items-center">
                     <img class="col-6 border border-dark border-1 rounded-5 rounded-circle p-3" src="@Model.ProfilePicturePath" alt="Photo de profil" />
                     <p class="text-custom-color-blue mt-5 mb-0 fw-bold fs-2"><span class="text-uppercase">@Model.LastName</span> @Model.FirstName</p>
                     <p class="text-custom-color-blue mb-5 fst-italic fs-3 fw-lighter">@Model.UserType</p>
@@ -26,15 +26,28 @@
             </div>
             <div class="col-7">
                 <div class="row">
-                    <div class="card border-dark col custom-bottom-shadow">
-                        <div class="card-body">
-                            test
+                    <div class="border border-dark rounded-top col">
+                        <p class="fs-2 p-2 fw-light m-0">Mes voyages</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="border border-dark border-top-0 col">
+                        <div class="row">
+                            <p class="col-6 border-end border-dark p-2 m-0 fs-2 fw-light">Passés</p>
+                            <p class="col-6 p-2 m-0 fs-2 fw-light">À venir</p>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="border border-dark border-top-0 rounded-bottom col">
+                        <div class="row">
+                            <p class="col-6 border-end border-dark p-2 m-0 fs-4 fw-light">Uckange > Metz</p>
+                            <p class="col-6 p-2 m-0 fs-4 fw-light">Metz-Uckange</p>
+                        </div>
+                    </div>                </div>
                 <div class="row mt-5">
                     <div class="card border-dark col custom-bottom-shadow">
-                        <div class="card-body d-flex justify-content-between align-items-center text-center">
+                        <div class="card-body d-flex justify-content-between align-items-center">
                             <img class="col-1 icon-default-height" src="/img/rewards-icon.png" alt="Récompenses" />
                             <p class="fs-3 col-10 text-custom-color-blue">Mes badges et récompenses</p>
                             <p class="fs-1 text-custom-color-orange col-1 fw-lighter">></p>
