--- a/NumAndDrive/Views/Account/Login.cshtml
+++ b/NumAndDrive/Views/Account/Login.cshtml
@@ -1,13 +1,17 @@
 ﻿@model NumAndDrive.ViewModels.LoginViewModel
 
-@{
+@*@{
     ViewData["Title"] = "Connectez vous";
 }
 
-<h2>@ViewData["Title"]</h2>
-<hr />
+<h2>@ViewData["Title"]</h2>*@
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-6">
+        <img src="~/img/logo.png" />
+    </div>
+    <div class="col-6 mt-4">
+        <h3>Connectez vous</h3>
         <form asp-action="Login">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group mt-3">
