--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -19,12 +19,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Accueil</a>
-                        <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
-                        <partial name="_LoginPartial">
-                        <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
-                    </div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Accueil</a>
+                            <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
+                            <partial name="_LoginPartial">
+                                <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
+                        </div>
+                    }
                 </div>
             </div>
         </nav>
