--- a/NumAndDrive/Views/Admin/Edit.cshtml
+++ b/NumAndDrive/Views/Admin/Edit.cshtml
@@ -44,6 +44,46 @@
     </div>
     <div class="mb-3 row">
         <div class="col-2">
+            <label asp-for="StatusId" class="col-form-label">Statut de l'utilisateur</label>
+        </div>
+        <div class="col-3">
+            <select asp-for="StatusId" class="form-control">
+                <option value="">- Sélectionner -</option>
+                @if (Model.Statuses != null && Model.Statuses.Count() > 0)
+                {
+                    foreach (var status in Model.Statuses)
+                    {
+                        <option value="@status.StatusId">@status.Type</option>
+                    }
+                }
+            </select>
+        </div>
+        <div class="col">
+            <span class="text-custom-color-orange" asp-validation-for="StatusId"></span>
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <div class="col-2">
+            <label asp-for="DepartmentId" class="col-form-label">Service ou classe</label>
+        </div>
+        <div class="col-3">
+            <select asp-for="DepartmentId" class="form-control">
+                <option value="">- Sélectionner -</option>
+                @if (Model.Departments != null && Model.Departments.Count() > 0)
+                {
+                    foreach (var department in Model.Departments)
+                    {
+                        <option value="@department.DepartmentId">@department.Name</option>
+                    }
+                }
+            </select>
+        </div>
+        <div class="col">
+            <span class="text-custom-color-orange" asp-validation-for="DepartmentId"></span>
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <div class="col-2">
             <input type="submit" class="btn custom-color-orange text-white custom-bottom-shadow" value="Modifier" />
         </div>
         <div class="col-3">
