--- a/NumAndDrive/Views/Journey/Add.cshtml
+++ b/NumAndDrive/Views/Journey/Add.cshtml
@@ -2,18 +2,18 @@
 @model JourneyCompanyViewModel
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <h2>Ajouter un nouveau trajet</h2>
+    <h2 class="text-center mb-4">Quel trajet proposez vous ?</h2>
 
     <form method="post" asp-controller="journey" asp-action="Add">
         <div class="text-danger" asp-validation-summary="All"></div>
-        <div class="row mb-3">
-            <div class="col-3">
-                <h4>D'où partons nous ?</h4>
+        <div class="row justify-content-center mb-4">
+            <div class="col-4">
+                <h4 class="text-center">D'où partons nous ?</h4>
                 <input type="text" asp-for="AddressToTrim" id="search" placeholder="Entrez une adresse" class="form-control" />
                 <ul id="suggestions" class="list-group"></ul>
             </div>
-            <div class="col-3">
-                <h4>Où allons nous ?</h4>
+            <div class="col-4">
+                <h4 class="text-center">Où allons nous ?</h4>
                 <select asp-for="Journey.AddressIncomingId" class="form-control">
                     <option>- Séléctionner -</option>
                     @if (Model.Company != null && Model.Company.Count() > 0)
@@ -26,25 +26,32 @@
                 </select>
             </div>
         </div>
-        <div class="row mb-3">
-            <div class="col-3">
-                <input asp-for="Journey.DepartureDate" type="date" id="date" class="form-control" />
+
+        <div class="row justify-content-center mb-4">
+                <h4 class="text-center">Quand partons nous?</h4>
+                <div class="col-4">
+                    <input asp-for="Journey.DepartureDate" type="date" id="date" class="form-control" />
+                </div>
+                <div class="col-4">
+                    <input asp-for="Journey.DepartureHour" type="time" id="time" class="form-control" />
+                </div>
             </div>
-            <div class="col-3">
-                <input asp-for="Journey.DepartureHour" type="time" id="time" class="form-control" />
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-3">
+
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <h4>Combien de places avez vous?</h4>
                 <input type="number" asp-for="Journey.AvailableSpots" class="form-control" />
             </div>
-        </div>
-        <div class="row">
-            <div class="col-3 mt-3">
-                <input type="submit" class="btn btn-primary" value="Créer" />
+            <div class="col-4">
             </div>
         </div>
-    </form>
+            <div class="row d-flex flex-row-reverse">
+                <div class="col-3 mt-3">
+                    <input type="submit" class="btn custom-color-orange text-white custom-bottom-shadow" value="Créer" />
+                </div>
+            </div>
+
+</form>
     
 
 <script>$(document).ready(function () {
