--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                         <div class="navbar-nav">
                             <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Accueil</a>
                             <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
-                            <partial name="_LoginPartial">
-                                <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
+                            <a class="nav-link active" aria-current="page" asp-controller="account" asp-action="logout">Se déconnecter</a>
+                            <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
                         </div>
                     }
                 </div>
