--- a/NumAndDrive/wwwroot/css/site.css
+++ b/NumAndDrive/wwwroot/css/site.css
@@ -53,6 +53,10 @@ body {
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 
+.custom-inner-shadow {
+    box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
+}
+
 .margin-middle {
     margin: 100px auto;
 }
@@ -61,3 +65,10 @@ body {
     height: 40vh;
 }
 
+.vh-75 {
+    height: 75vh;
+}
+
+.vh-100 {
+    height: 100vh;
+}
