Fixed: customed home index view to follow the figma

--- a/NumAndDrive/Views/Home/Index.cshtml
+++ b/NumAndDrive/Views/Home/Index.cshtml
@@ -1,27 +1,25 @@
-﻿<div class="container">
-    <h1 class="mb-5 text-center">Avec quel profil navigons-nous aujourd'hui ?</h1>
-    <div class="container mb-5">
-        <div class="row d-flex justify-content-center">
-            <div class="col-6">
+﻿
+    <div class="container">
+        <div class="row vh-75 d-flex justify-content-center align-items-center gap-5">
+            <div class="col-5">
                 <a asp-controller="" asp-action="" class="text-decoration-none">
-                    <div class="card custom-color-blue d-flex justify-content-center align-items-center border-0 shadow mb-3 p-2">
-                        <div class="card-body">
-                            <img src="../img/profile-pic-white.png" class="card-text m-4" alt="Avatar" width="200">
-                            <p class="card-text text-white fs-4 text-center m-5">Conducteur</p>
+                    <div class="card custom-color-blue border-0 shadow mb-3 p-2 vh-50">
+                        <div class="card-body d-flex align-items-center flex-column">
+                            <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
+                            <p class="card-text text-white fs-1 fw-bold m-5">Conducteur</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <a asp-controller="" asp-action="" class="text-decoration-none">
-                    <div class="card custom-color-orange d-flex justify-content-center align-items-center border-0 shadow mb-3 p-2">
-                        <div class="card-body">
-                            <img src="../img/profile-pic-white.png" class="card-text m-4" alt="Avatar" width="200">
-                            <p class="card-text text-white fs-4 text-center m-5">Passager</p>
+                    <div class="card custom-color-orange border-0 shadow mb-3 p-2 vh-50">
+                        <div class="card-body d-flex align-items-center flex-column">
+                            <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
+                            <p class="card-text text-white fs-1 fw-bold m-5">Passager</p>
                         </div>
                     </div>
                 </a>
             </div>
         </div>
     </div>
-</div>
