Fixed: useless css properties have been removed

--- a/NumAndDrive/Views/Account/Login.cshtml
+++ b/NumAndDrive/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div class="row">
+    <div class="row overflow-hidden">
         <div class="vh-100 col-5 d-flex justify-content-end align-items-center">
             <img src="/img/logo-detailed.png" alt="Logo de l'application" />
 
@@ -42,7 +42,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <input asp-for="Email" class="bg-white form-control border border-dark rounded-0 custom-inner-shadow" />
+                                <input asp-for="Email" class="custom-focus bg-white border border-dark rounded-0 custom-inner-shadow p-2 col-12" />
                             </div>
                         </div>
                         <div class="row">
