--- a/NumAndDrive/wwwroot/css/site.css
+++ b/NumAndDrive/wwwroot/css/site.css
@@ -65,22 +65,11 @@ body {
     height: 25vh;
 }
 
-.vh-40 {
-    height: 40vh;
-}
-
-.vh-50 {
-    height: 50vh;
-}
-
-.vh-60 {
-    height: 60vh;
-}
-
 .vh-75 {
     height: 75vh;
 }
 
-.vh-100 {
-    height: 100vh;
+input.custom-focus:focus {
+    outline: none;
+    border: 1px orange solid;
 }
