Feat: navigate links are now customized with bootstrap

--- a/NumAndDrive/Views/Account/Login.cshtml
+++ b/NumAndDrive/Views/Account/Login.cshtml
@@ -58,7 +58,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <input asp-for="Password" class="bg-white form-control border border-dark rounded-0 custom-inner-shadow" />
+                                <input asp-for="Password" class="custom-focus bg-white border border-dark rounded-0 custom-inner-shadow p-2 col-12" />
                             </div>
                         </div>
                         <div class="row">
