--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string currentController = ViewContext.RouteData.Values["controller"].ToString();
+    string currentAction = ViewContext.RouteData.Values["action"].ToString();
+}
+
+<!DOCTYPE html>
 <html lang="fr-fr">
 <head>
     <meta charset="utf-8" />
@@ -18,12 +23,34 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Accueil</a>
-                        <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
-                        <a class="nav-link active" aria-current="page" asp-controller="account" asp-action="logout">Se déconnecter</a>
-                        <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav gap-3">
+                        @if (!(currentController == "Admin" && currentAction == "Index"))
+                        {
+                            <div class="border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center">
+                                <a class="nav-link active" aria-current="page" asp-controller="admin" asp-action="Index">Panel administrateur</a>
+                            </div>
+                        }
+
+                        @if (!(currentController == "Messages" && currentAction == "Index"))
+                        {
+                            <div class="border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center align-items-center">
+                                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Messagerie</a>
+                            </div>
+                        }
+
+                        <div class="border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center align-items-center">
+                            <a class="nav-link active" aria-current="page" asp-controller="account" asp-action="logout">Déconnexion</a>
+                        </div>
+
+                        @if (!(currentController == "User" && currentAction == "Index"))
+                        {
+                            <div class="border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center">
+                                <a class="nav-link active" aria-current="page" asp-controller="user" asp-action="index">Accéder à mon profil</a>
+                            </div>
+                        }
+
+                            
                     </div>
                 </div>
             </div>
