Feat: settings partial view has been created

--- a/NumAndDrive/Views/User/Settings.cshtml
+++ b/NumAndDrive/Views/User/Settings.cshtml
@@ -37,9 +37,7 @@
             </div>
         </div>
         <div class="col-8 border rounded-end border-dark custom-bottom-shadow">
-            <div class="">
-
-            </div>
+            <partial name="_Settings"></partial>
             <div class="h-100 d-flex justify-content-end align-items-end">
                 <a asp-controller="User" asp-action="Index" class="col-1">
                     @*Link is not the correct one*@
